--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.13",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "1.1.1",
+    "@radix-ui/themes": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0"
