--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/themes": "^3.1.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.52.0"
+    "react-hook-form": "^7.52.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.5.0",
