--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/themes": "^3.1.1",
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.52.0",
-    "react-redux": "^9.1.2"
+    "react-hook-form": "^7.52.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.5.0",
