--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.13",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -31,7 +32,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.5.0",
