--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/themes": "^3.1.1",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
